[gd_scene load_steps=49 format=3 uid="uid://uxy816amcxf0"]

[ext_resource type="Texture2D" uid="uid://b50yos60kjpva" path="res://art/player/blaster.png" id="1_137mn"]
[ext_resource type="Script" path="res://scripts/gun.gd" id="1_a1byo"]
[ext_resource type="Texture2D" uid="uid://d3hrvheu1l4w0" path="res://art/bullet/muzzleFlash.png" id="2_uk50p"]
[ext_resource type="Texture2D" uid="uid://yc2tiuoqwfcw" path="res://art/bullet/muzzleFlash2.png" id="3_3fmh3"]
[ext_resource type="Texture2D" uid="uid://dsjwj1ugdnr36" path="res://art/item/orb_237__36x36-sheet.png" id="4_h86fb"]
[ext_resource type="Shader" path="res://shaders/laser.gdshader" id="5_n8l7v"]
[ext_resource type="Texture2D" uid="uid://cbctexe01isn8" path="res://art/bullet/blue_glow.png" id="5_x0sy1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j0qu6"]
atlas = ExtResource("2_uk50p")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8chta"]
atlas = ExtResource("2_uk50p")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o04w"]
atlas = ExtResource("2_uk50p")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko0n8"]
atlas = ExtResource("2_uk50p")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0hfo"]
atlas = ExtResource("2_uk50p")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_8ymby"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_j0qu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8chta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0o04w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko0n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0hfo")
}],
"loop": false,
"name": &"shoot",
"speed": 24.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qogjl"]
atlas = ExtResource("3_3fmh3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdobr"]
atlas = ExtResource("3_3fmh3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_33ts8"]
atlas = ExtResource("3_3fmh3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_06bv4"]
atlas = ExtResource("3_3fmh3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0yc58"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_qogjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdobr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33ts8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06bv4")
}],
"loop": false,
"name": &"shoot",
"speed": 24.0
}]

[sub_resource type="Curve" id="Curve_17ced"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.666667, 0.769231), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_kpski"]
curve = SubResource("Curve_17ced")

[sub_resource type="Gradient" id="Gradient_meayn"]
colors = PackedColorArray(0.117647, 0.113725, 0.223529, 1, 0.87451, 0.517647, 0.647059, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ac4q7"]
gradient = SubResource("Gradient_meayn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yti47"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 80.0
initial_velocity_min = 50.7
initial_velocity_max = 114.7
gravity = Vector3(0, 0, 0)
linear_accel_max = 78.4
color_ramp = SubResource("GradientTexture1D_ac4q7")
alpha_curve = SubResource("CurveTexture_kpski")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_hrunp"]
frequency = 0.0039
fractal_lacunarity = 4.76
fractal_gain = 0.37

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_5kf16"]
seamless = true
as_normal_map = true
bump_strength = 20.4
noise = SubResource("FastNoiseLite_hrunp")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ylovx"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_71jlm"]
seamless = true
noise = SubResource("FastNoiseLite_ylovx")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_mf8ds"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_tho77"]
seamless = true
noise = SubResource("FastNoiseLite_mf8ds")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k6l7o"]
shader = ExtResource("5_n8l7v")
shader_parameter/scroll1 = Vector2(1, 0.2)
shader_parameter/scroll2 = Vector2(0.2, 1.4)
shader_parameter/speed = 0.602
shader_parameter/xStretch = 3.0
shader_parameter/yStretch = 0.1
shader_parameter/laserSize = 0.575
shader_parameter/wobbliness = 0.132
shader_parameter/color1 = Color(0.478431, 0.211765, 0.482353, 1)
shader_parameter/color2 = Color(0.87451, 0.517647, 0.647059, 1)
shader_parameter/colorMixFactor = 3.24
shader_parameter/glowFactor = 2.005
shader_parameter/minAlpha = 0.915
shader_parameter/NOISE_1 = SubResource("NoiseTexture2D_5kf16")
shader_parameter/NOISE_2 = SubResource("NoiseTexture2D_71jlm")
shader_parameter/TRANSPARENCY_VARIATION = SubResource("NoiseTexture2D_tho77")

[sub_resource type="AtlasTexture" id="AtlasTexture_lcilt"]
atlas = ExtResource("4_h86fb")
region = Rect2(0, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_20o4h"]
atlas = ExtResource("4_h86fb")
region = Rect2(36, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t47n"]
atlas = ExtResource("4_h86fb")
region = Rect2(72, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_3payc"]
atlas = ExtResource("4_h86fb")
region = Rect2(108, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwaxj"]
atlas = ExtResource("4_h86fb")
region = Rect2(144, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lg8j"]
atlas = ExtResource("4_h86fb")
region = Rect2(180, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhoxe"]
atlas = ExtResource("4_h86fb")
region = Rect2(216, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ljff"]
atlas = ExtResource("4_h86fb")
region = Rect2(252, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ulgs"]
atlas = ExtResource("4_h86fb")
region = Rect2(288, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vbcj"]
atlas = ExtResource("4_h86fb")
region = Rect2(324, 0, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_s7cbo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcilt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20o4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t47n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3payc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwaxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lg8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhoxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ljff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ulgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vbcj")
}],
"loop": false,
"name": &"shoot",
"speed": 20.0
}]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_l3ugm"]
b = Vector2(0, -300)

[sub_resource type="AtlasTexture" id="AtlasTexture_ix7rh"]
atlas = ExtResource("1_137mn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_phfj6"]
atlas = ExtResource("1_137mn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_djx0i"]
atlas = ExtResource("1_137mn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_38ke8"]
atlas = ExtResource("1_137mn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rxaj"]
atlas = ExtResource("1_137mn")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_uo2ek"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ix7rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phfj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djx0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38ke8")
}],
"loop": false,
"name": &"fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rxaj")
}],
"loop": true,
"name": &"holster",
"speed": 5.0
}]

[node name="Gun" type="Node2D"]
script = ExtResource("1_a1byo")

[node name="BulletSpawn" type="Marker2D" parent="."]
position = Vector2(0, -6)

[node name="MuzzleFlash1" type="AnimatedSprite2D" parent="BulletSpawn"]
visible = false
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_8ymby")
animation = &"shoot"

[node name="MuzzleFlash2" type="AnimatedSprite2D" parent="BulletSpawn"]
visible = false
sprite_frames = SubResource("SpriteFrames_0yc58")
animation = &"shoot"

[node name="GPUParticles2D" type="GPUParticles2D" parent="BulletSpawn"]
position = Vector2(0, -1)
emitting = false
amount = 128
process_material = SubResource("ParticleProcessMaterial_yti47")
lifetime = 0.2
one_shot = true
explosiveness = 1.0

[node name="Line2D" type="Line2D" parent="BulletSpawn"]
self_modulate = Color(0.25098, 0.152941, 0.317647, 1)
material = SubResource("ShaderMaterial_k6l7o")
points = PackedVector2Array(24, -2, 221, -2.00049)
texture = ExtResource("5_x0sy1")
texture_mode = 2

[node name="MuzzleFlash" type="AnimatedSprite2D" parent="BulletSpawn"]
position = Vector2(0, -8)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_s7cbo")
animation = &"shoot"

[node name="RayCast2D" type="RayCast2D" parent="BulletSpawn"]
visible = false
enabled = false
target_position = Vector2(0, -300)
collide_with_areas = true

[node name="LaserHitbox" type="Area2D" parent="BulletSpawn"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletSpawn/LaserHitbox"]
shape = SubResource("SegmentShape2D_l3ugm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uo2ek")
animation = &"fire"

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="out_of_ammo" from="." to="." method="_on_out_of_ammo"]
